--- a/ansible/roles/soleria/files/docker/services/.env
+++ b/ansible/roles/soleria/files/docker/services/.env
@@ -2,7 +2,7 @@ COMPOSE_PROJECT_NAME=media
 PUID=1000
 PGID=1000
 TZ="Europe/London"
-DOCKERDIR="/home/dtm/docker"
+DOCKERDIR="/opt/docker"
 NORDVPNUSER={{ nordvpn.user }}
 NORDVPNPASS={{ nordvpn.password }}
 NORDVPNPRIVATE_KEY={{ nordvpn.privateKey }}
