change traefik to re-direct to https

--- a/ansible/roles/soleria/files/traefik/traefik.yml
+++ b/ansible/roles/soleria/files/traefik/traefik.yml
@@ -5,7 +5,7 @@ entryPoints:
       redirections:
         entryPoint:
           to: websecure
-          scheme: http
+          scheme: https
 
   websecure:
     address: :443
