--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
-# repos:
-# - repo: https://github.com/pre-commit/pre-commit-hooks
-#   rev: v2.3.0
-#   hooks:
+repos:
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.3.0
+  hooks:
 #     - id: check-yaml
 #       name: Validate yaml in repo
 #       files: '.*\.ya{0,1}ml'
-#     - id: trailing-whitespace
+    - id: trailing-whitespace
 
 # - repo: https://github.com/antonbabenko/pre-commit-terraform
 #   rev: v1.76.0
