--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,15 +7,15 @@ repos:
 #       files: '.*\.ya{0,1}ml'
     - id: trailing-whitespace
 
-# - repo: https://github.com/antonbabenko/pre-commit-terraform
-#   rev: v1.76.0
-#   hooks:
-#     - id: terraform_fmt
-#     # - id: terraform_tflint
-#     #   args:
-#     #     - --args=--enable-rule=terraform_documented_variables
-#     #     - --args=--enable-rule=terraform_documented_outputs
-#     # - id: terraform_checkov
+- repo: https://github.com/antonbabenko/pre-commit-terraform
+  rev: v1.76.0
+  hooks:
+    - id: terraform_fmt
+    - id: terraform_tflint
+      args:
+        - --args=--enable-rule=terraform_documented_variables
+        - --args=--enable-rule=terraform_documented_outputs
+    - id: terraform_checkov
 
 # - repo: https://github.com/ansible/ansible-lint
 #   rev: v6.9.1
