--- a/ansible/roles/aurora/tasks/docker.yml
+++ b/ansible/roles/aurora/tasks/docker.yml
@@ -25,45 +25,45 @@
     src: files/docker/.env
     dest: /home/dtm/docker/.env
 
-- name: Ensure DNSStubListener is set to no
-  lineinfile:
-    path: /etc/systemd/resolved.conf
-    regexp: '^#DNSStubListener=yes'
-    line: DNSStubListener=no
-  become: true
+# - name: Ensure DNSStubListener is set to no
+#   lineinfile:
+#     path: /etc/systemd/resolved.conf
+#     regexp: '^#DNSStubListener=yes'
+#     line: DNSStubListener=no
+#   become: true
 
-- name: check stat of path
-  stat:
-    path: /etc/resolv.conf
-  register: link
+# - name: check stat of path
+#   stat:
+#     path: /etc/resolv.conf
+#   register: link
 
-- name: set vars for deletion
-  debug:
-    msg: "does path /etc/resolv.conf exist? {{link.stat.exists}} and is it link {{link.stat.islnk|default(false)}}"
+# - name: set vars for deletion
+#   debug:
+#     msg: "does path /etc/resolv.conf exist? {{link.stat.exists}} and is it link {{link.stat.islnk|default(false)}}"
 
-- name: remove symlink
-  file:
-    path: /etc/resolv.conf
-    state: absent
-  when: link.stat.islnk is defined and not link.stat.islnk
-  become: true
+# - name: remove symlink
+#   file:
+#     path: /etc/resolv.conf
+#     state: absent
+#   when: link.stat.islnk is defined and not link.stat.islnk
+#   become: true
 
-- name: Create a symbolic link
-  file:
-    src: /run/systemd/resolve/resolv.conf
-    dest: /etc/resolv.conf
-    state: link
-  when: link.stat.islnk is defined and not link.stat.islnk
-  register: newSystemdConfig
-  become: true
+# - name: Create a symbolic link
+#   file:
+#     src: /run/systemd/resolve/resolv.conf
+#     dest: /etc/resolv.conf
+#     state: link
+#   when: link.stat.islnk is defined and not link.stat.islnk
+#   register: newSystemdConfig
+#   become: true
 
-- name: Restart DNS service on ubuntu
-  become: true
-  ansible.builtin.systemd:
-    name: systemd-resolved.service
-    state: restarted
-    enabled: yes
-  when: newSystemdConfig is changed
+# - name: Restart DNS service on ubuntu
+#   become: true
+#   ansible.builtin.systemd:
+#     name: systemd-resolved.service
+#     state: restarted
+#     enabled: yes
+#   when: newSystemdConfig is changed
 
 - name: Create and start network services
   docker_compose:
