--- a/ansible/roles/dmdc/files/dandd.conf
+++ b/ansible/roles/dmdc/files/dandd.conf
@@ -2,10 +2,10 @@ server {
   listen [::]:443 ssl;
   listen 443 ssl;
 
-  server_name whoami.declanmorris.com www.whoami.declanmorris.com;
+  server_name dandd.declanmorris.com www.dandd.declanmorris.com;
 
   location / {
-      proxy_pass http://localhost:8085/;
+      proxy_pass http://localhost:1313/;
       proxy_buffering off;
   }
 
