--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
       args:
         - --args=--enable-rule=terraform_documented_variables
         - --args=--enable-rule=terraform_documented_outputs
-    # - id: terraform_checkov
+    - id: terraform_checkov
 
 # - repo: https://github.com/ansible/ansible-lint
 #   rev: v6.9.1
