--- a/ansible/roles/plex/tasks/dockerPrepare.yml
+++ b/ansible/roles/plex/tasks/dockerPrepare.yml
@@ -1,14 +1,10 @@
-- name: Install docker python package
-  pip:
-    name: docker
+# - name: Install docker python package
+#   pip:
+#     name: docker
 
-- name: Install docker-compose python package
-  pip:
-    name: docker-compose
-
-- name: Install docker python package - required for ansible docker compose
-  pip:
-    name: docker
+# - name: Install docker-compose python package
+#   pip:
+#     name: docker-compose
 
 - name: Creates docker directory
   file:
